                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 11-06-2006 changed: mplayer now uses xbmc ftp filesystem. seeking is disabled for now due to lockups in curl. (works when using dvdplayer or mplayer without cache)
 - 11-06-2006 added: better subtitle charset detection. mplayer now tries to detect any multicharacter charsets, then fallbacks to user specified
 - 11-06-2006 added: builtin command, xbmc.KaiConnection.     Change kai connection status (connect/disconnect).
 - 11-06-2006 added: System.kaienabled conditional visibility tag.
 - 11-06-2006 added: System.dvdready and System.trayopen conditional visibility tag.
 - 11-06-2006 fixed: Added additional late check for X+Y button combo for debugging.
 - 11-06-2006 changed: Added black border around freemem and remote code info for better readability.
 - 11-06-2006 fixed: Start button mapped in virtual keyboard to Done now as well.
 - 11-06-2006 changed: my programs now displays folder size. plus added sort by size.
 - 11-06-2006 fixed: edit media source failed if you changed source name.
 - 11-06-2006 fixed: [ 1504128 ] Behaviour of masterlock.
 - 11-06-2006 changed: you can now also remove extensions using advancedsettings.xml (see manual).
 - 10-06-2006 changed: moved region setting from date & time to appearance
 - 10-06-2006 fixed: Initial control focus didn't observe the controlgroup's previous focus.
 - 10-06-2006 fixed: <label> in button controls didn't accept $INFO[] labels.
 - 10-06-2006 added: set source thumbnail in gui. access from context menu.
 - 09-06-2006 fixed: Watched status is preserved across views, rather than being separate.
 - 09-06-2006 fixed: Recursive slideshow is only enabled if there are subfolders