@@ -63,8 +63,7 @@ CGUIThumbnailPanel::CGUIThumbnailPanel(DWORD dwParentID, DWORD dwControlId, int 
   m_iThumbHeight = 64;
   m_iThumbXPos = 8;
   m_iThumbYPos = 8;
-  m_bHideFileNameLabel = false;
-  m_bHideDirectoryNameLabel = false;
+  m_labelState = SHOW_ALL;
   m_pageControlVisible = true;   // show the spin control by default
   m_usingBigIcons = false;
   m_upDown.SetShowRange(true); // show the range by default
@@ -163,9 +162,11 @@ void CGUIThumbnailPanel::RenderItem(bool bFocus, int iPosX, int iPosY, CGUIListI
   if (iStage == 1) //render text
   {
     // hide filenames in thumbnail panel
-    if (m_bHideFileNameLabel && !pItem->m_bIsFolder)
-        return;
-    if (m_bHideDirectoryNameLabel && pItem->m_bIsFolder)
+    if (m_labelState == HIDE_ALL)
+      return;
+    if (m_labelState == HIDE_FILES && !pItem->m_bIsFolder)
+      return;
+    if (m_labelState == HIDE_FOLDERS && pItem->m_bIsFolder)
       return;
 
     CStdStringW strItemLabelUnicode;
